@@ -7,15 +7,15 @@ AUX PyQt4-4.7.3-qreal_float_support.patch 6460 RMD160 f022dc75ccde5b923c689f82d1
 DIST PyQt-x11-gpl-4.8.1.tar.gz 9409175 RMD160 e5ba0d98359ce315432f479a5f44b2c1ae69b77a SHA1 e064ed38817bafde72f2a57679d80d40c7015afb SHA256 1feab80dc82dcd451233edeb1cde9cc75fa38b6e8f47780ec6dc317ebe0cf370
 DIST PyQt-x11-gpl-4.8.4.tar.gz 9799081 RMD160 100d16e9005e3b83f0030e498a16d99636c9034c SHA1 747236d5dd103687cac54746af0a24a1adbc067c SHA256 fcfa3ecc0b4fad6d93227751b36a6f81ea104ee19dd26905f52de59f060b3e98
 DIST PyQt-x11-gpl-4.9.1.tar.gz 9742132 RMD160 056d6570ffc5ad873ef36d8181122cbb79d7b5ef SHA1 6aa0e64cdcca0f23946c5e6c244b19189c234306 SHA256 f283557f2190ffc00d72fe8451ac15536cab777c36a9b573031328f401629bb1
-EBUILD PyQt4-4.8.1.ebuild 4795 RMD160 d2ec102d50cf3646208dedaf3455a09b7c0e3dfe SHA1 35ba038caf25342e1705880c2626dcda58c3c31c SHA256 3c3ad0b2a40a92a55425fbe333177230ea47a72bfc81629132f2c252a07cf226
-EBUILD PyQt4-4.8.4.ebuild 4987 RMD160 146a4670e236a5819336b6517fc71c79de719f60 SHA1 b529d27c5ab709664cfc04e25565a42b50e5e494 SHA256 01f82e2a52d8a0d9a77b248ca4693e0816fae5033012b732bdb5bfb83b16c1fe
-EBUILD PyQt4-4.9.1.ebuild 5683 RMD160 fdc0ae2b77f287d4ccbba19d803576db04603313 SHA1 e2d0c177205ddb978dd1ba3b1e938584153d1899 SHA256 fddd314457308e0f0fa9aa9b2614a0ef1fdc59d3a43a7523932a4ca0558e8778
-MISC ChangeLog 25480 RMD160 00ced197eb56c3440a8e1ef0d61b9a60f9fff236 SHA1 55691d6f24f5cf6be65a2dc43009c229f5c42177 SHA256 0bfaaaf4835f985f6f85c998c35615c1935003a76e184f0f620fc6c5618a6f06
+EBUILD PyQt4-4.8.1.ebuild 4791 RMD160 99219bba43f392fe9d3417543e1cb09973c8ec15 SHA1 36503013fb6c377aa829d746d7cc62b196b4d659 SHA256 3150ddd714452b9a0ee1fdddc498183ad6dfaff3060b37b2b918c5113d95fa73
+EBUILD PyQt4-4.8.4.ebuild 4983 RMD160 d0a937c2a9d9a22b670e8e66c2b8984228e13378 SHA1 d5cb5c12587600bc244d0f053fee998686b51f13 SHA256 07483176ac01c07ed8f410e157d510302360426566baef88acef0854f6e40e69
+EBUILD PyQt4-4.9.1.ebuild 5680 RMD160 e0d5692655ba174383c5517702f50876b6226653 SHA1 72686a20015e79519103c66f55fafb03ccb1c772 SHA256 a908cd8d7af5582e95d3c10623d09412be4b91109b6ead9f40b7671e631cb41f
+MISC ChangeLog 25618 RMD160 6a6196b519984e05162d891d2c700fad972ac501 SHA1 b8b1a2ff71028971afda06d47f4b2d1b45a72742 SHA256 f73d8354070ea0812da07b6dda4ed422ce634c8dcad5d2c3f861956d87e3e01d
 MISC metadata.xml 1100 RMD160 b6a6f625676d8c3a0d24cd27005e79f696092931 SHA1 d9d7f6a94ebf924c9c7968ac0a8aaa6205497f4e SHA256 7ca5b5cd157c0cea93a86c007b0eaa57882a3b738933299c33eb6e1d4ceca6ae
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk+zCPwACgkQC77qH+pIQ6QV8AD/WNZkP3d78HlzELKyPzc3VJJu
-LbWrlwScD5jJVJTBcKwBAKlG+oGjYgTvmhdMX/JRvfESPGKUp1gOlBM2ZySMiDHi
-=s1dw
+iF4EAREIAAYFAk+zCnEACgkQC77qH+pIQ6SdzAD/TBWQBssl62TdPgD0RSndHndx
+r7X5tdSiWaYwSPeXTXIBAKUNKSPp5fh864ls1Qsppx+zmFnA+f0QQnu8M8WvKX7j
+=xiz3
 -----END PGP SIGNATURE-----
