@@ -1,13 +1,13 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/PyQt4/PyQt4-4.9.1.ebuild,v 1.9 2012/05/16 01:55:01 floppym Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/PyQt4/PyQt4-4.9.1.ebuild,v 1.10 2012/05/16 02:01:14 floppym Exp $
 
 EAPI=4
 
 PYTHON_DEPEND="*"
 PYTHON_EXPORT_PHASE_FUNCTIONS="1"
 SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.1 *-jython *-pypy-*"
+RESTRICT_PYTHON_ABIS="*-jython *-pypy-*"
 
 inherit toolchain-funcs qt4-r2 python
 
